# pyDatabase

./: .gitignore  LICENSE  README.md  README.ru.md  config.example.json  pyproject.toml  query.example.json  setup.py  uspexdb
example/: README.md
example/config/: README.md  config.json
example/query/: README.md  fragment_example.mol2  query.json
scripts/: build_extension.sh  build_scie.sh  prepare_wheelhouse.sh
src/uspexdb/: __init__.py  cli.py  paths.py  reference.py
src/uspexdb/config_search/: __init__.py  runner.py
src/uspexdb/legacy/: __init__.py  uspexdb_v2.py
src/uspexdb/query_search/: __init__.py  _c_anchor.c  codes.py  compact_cache.py  mol2.py  runner.py  search.py  validate.py
wheelhouse/: ase-3.28.0-py3-none-any.whl  charset_normalizer-3.4.7-cp312-cp312-macosx_10_13_universal2.whl  fonttools-4.62.1-cp312-cp312-macosx_10_13_universal2.whl  kiwisolver-1.5.0-cp312-cp312-macosx_11_0_arm64.whl  monty-2026.2.18-py3-none-any.whl  palettable-3.3.3-py2.py3-none-any.whl  pymatgen-2026.3.23-py3-none-any.whl  pymatgen_core-2026.4.16-cp312-cp312-macosx_11_0_arm64.whl  spglib-2.7.0-cp312-cp312-macosx_11_0_arm64.whl  uncertainties-3.2.3-py3-none-any.whl  uspexdb-0.1.0-cp312-cp312-macosx_10_9_universal2.whl
