[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uspexdb"
version = "0.1.0"
description = "Unified CLI for USPEX database config and contact-query search"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "ase",
    "matplotlib",
    "pymatgen",
]

[project.scripts]
uspexdb = "uspexdb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
